--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     </div>
     <!-- end slider -->
     <!-- start card -->
-    <div class="card1 container mx-auto widget row mt-2 mb-3">
-      <div class="card col-lg-3 border-0 rounded-0">
+    <div class=" card1 container mx-auto widget row mt-2">
+      <div class=" card col-lg-3 border-0 rounded-0">
         <img class="mx-auto d-block img-fluid mt-2" src="img/bag.svg" width="150px" height="150px" />
         <div class="card-body text-center">
           <h4 class="card-title">خرید از سایت</h4>
@@ -152,31 +152,35 @@
     <!-- end card -->
     <!-- start article -->
     <div>
-      <p class="ph-1 container">
-        مجموعه ی ما با هدف فعالیت در زمینه تجارت الکترونیک بیش از ۹ سال پیش
-        فعالیت خود را آغاز کرد و با بیشتر شدن تحریم های بین المللی و مشکلات
-        وبمستران عزیز تصمیم گرفتیم فعالیت خود را در بازار ایران برای رفع موانع
-        بیشتر کنیم. به همین جهت سایت هایی را در زمینه کسب در آمد آنلاین و
-        اینترنتی،بازاریابی اینترنتی، پرداخت و نقد کردن درآمد های وبمستران از
-        طریق وب مانی ، پرفکت مانی ، بیتکوین ، پی زا و پی پال در ایران ایجاد
-        کردیم. ما با همکاری نیروهای خلاق و متخصص در حوزه برنامه نویسی ، سیستم
-        های مالی آنلاین توانسته ایم بهترین و امن ترین مکان را در این زمینه تولید
-        کرده و ارائه خدمات به صدها کارآفرین، فریلنسر و موسسه را در کارنامه خود
-        ثبت کنیم.
-      </p>
+      <div class="ph-1">
+        <p class="container">
+          مجموعه ی ما با هدف فعالیت در زمینه تجارت الکترونیک بیش از ۹ سال پیش
+          فعالیت خود را آغاز کرد و با بیشتر شدن تحریم های بین المللی و مشکلات
+          وبمستران عزیز تصمیم گرفتیم فعالیت خود را در بازار ایران برای رفع موانع
+          بیشتر کنیم. به همین جهت سایت هایی را در زمینه کسب در آمد آنلاین و
+          اینترنتی،بازاریابی اینترنتی، پرداخت و نقد کردن درآمد های وبمستران از
+          طریق وب مانی ، پرفکت مانی ، بیتکوین ، پی زا و پی پال در ایران ایجاد
+          کردیم. ما با همکاری نیروهای خلاق و متخصص در حوزه برنامه نویسی ، سیستم
+          های مالی آنلاین توانسته ایم بهترین و امن ترین مکان را در این زمینه تولید
+          کرده و ارائه خدمات به صدها کارآفرین، فریلنسر و موسسه را در کارنامه خود
+          ثبت کنیم.
+        </p>
+      </div>
     </div>
     <!-- end article -->
     <!-- start box -->
-    <div class="container">
-      <div class="d-flex align-items-center position-relative w-100% h-50%">
-        <img src="./img/man-station.png" width="100%" height="25%">
-        <img src="./img/card.svg" width="10%" height="50%" class="position-absolute">
-        <h4 class="titre text-white w-50%  h-25%">با خیال آسوده از خدمات ما استفاده کنید</h4>
-        <p class="matn text-white w-50%  h-25%">
-          کالاها و خدمات این فروشگاه ، حسب مورد دارای مجوزهای لازم از مراجع
-          مربوطه میباشد و فعالیت های این سایت تابع قوانین و مقررات جمهوری
-          اسلامی ایران است.
-        </p>
+
+    <div class=" pic-back" dir="rtl">
+      <div class="container d-flex p-2 pt-4">
+        <img src="img/card.svg" width="60" height="75" class="ms-4" />
+        <div class="my-auto text-white">
+          <h4 class="pt-3">با خیال آسوده از خدمات ما استفاده کنید</h4>
+          <p>
+            کالاها و خدمات این فروشگاه ، حسب مورد دارای مجوزهای لازم از مراجع
+            مربوطه میباشد و فعالیت های این سایت تابع قوانین و مقررات جمهوری
+            اسلامی ایران است .
+          </p>
+        </div>
       </div>
     </div>
     <!-- end box -->
@@ -185,72 +189,72 @@
       data-bs-interval="false">
       <div>
         <div class="d-flex">
-            <img src="./img/Group 57.png" width="30" height="30">
-            <h2 class="mx-3" dir="rtl">نظرات مشتریان ما</h2>
-            <!-- line -->
-            <div class="dropdown-divider col-7 my-auto"></div>
-            <button class="carousel-control-prev position-absolute" type="button"
-              data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon position-absolute" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next position-absolute" type="button"
-              data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
-              <span class="carousel-control-next-icon position-absolute" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+          <img src="./img/Group 57.png" width="30" height="30">
+          <h2 class="mx-3" dir="rtl">نظرات مشتریان ما</h2>
+          <!-- line -->
+          <div class="dropdown-divider col-7 my-auto"></div>
+          <button class="carousel-control-prev position-absolute" type="button"
+            data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon position-absolute" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next position-absolute" type="button"
+            data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+            <span class="carousel-control-next-icon position-absolute" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <!-- carousel item -->
+      <div class="container" style="direction: rtl">
+        <div class="">
+          <div class="d-flex p-3">
+            <img src="img/comment-man.png" class="flex-shrink-0 me-3 mt-3 rounded-circle"
+              style="width: 60px; height: 60px; " />
+
+            <div class="comment-text mx-3 ">
+              <h4>فروش وبمانی</h4>
+              <p>
+                شخصا وظیفه خودم دونستم از شما هم تشکر کنم بابت خدمات خوب
+                سریع و صادقانه تان و هم تبریک بگویم بابت سایت زیبا و
+                قشنگتان موفق و سر بلند باشید ...
+              </p>
+              <span class="badge bg-primary ">محمد معین اکبری</span>
+            </div>
           </div>
+
+
+        </div>
+      </div>
+      <!-- carousel item -->
+    </div>
+    <div class="carousel-item">
+      <div class="container mt-3" style="direction: rtl">
+        <div class="border">
+          <div class="d-flex p-3">
+            <img src="img/comment-man.png" class="flex-shrink-0 me-3 mt-3 rounded-circle"
+              style="width: 60px; height: 60px" />
+            <div class="comment-text">
+              <h4>خدمات کامپیوتری</h4>
+              <p>ممنون از سایت خوبتون
+              </p>
+            </div>
+          </div>
+          <span class="badge bg-primary">علی اصغر ترابی</span>
         </div>
       </div>
 
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <!-- carousel item -->
-        <div class="container" style="direction: rtl">
-          <div class="">
-            <div class="d-flex p-3">
-              <img src="img/comment-man.png" class="flex-shrink-0 me-3 mt-3 rounded-circle"
-                style="width: 60px; height: 60px; " />
-                
-              <div class="comment-text mx-3 ">
-                <h4>فروش وبمانی</h4>
-                <p>
-                  شخصا وظیفه خودم دونستم از شما هم تشکر کنم بابت خدمات خوب
-                  سریع و صادقانه تان و هم تبریک بگویم بابت سایت زیبا و
-                  قشنگتان موفق و سر بلند باشید ...
-                </p>
-                <span class="badge bg-primary ">محمد معین اکبری</span>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-        <!-- carousel item -->
-      </div>
-      <div class="carousel-item">
-        <div class="container mt-3" style="direction: rtl">
-          <div class="border">
-            <div class="d-flex p-3">
-              <img src="img/comment-man.png" class="flex-shrink-0 me-3 mt-3 rounded-circle"
-                style="width: 60px; height: 60px" />
-              <div class="comment-text">
-                <h4>خدمات کامپیوتری</h4>
-                <p>ممنون از سایت خوبتون
-                </p>
-              </div>
-            </div>
-            <span class="badge bg-primary">علی اصغر ترابی</span>
-          </div>
-        </div>
-
-      </div>
-    </div>
+  </div>
   </div>
   <!--  end carousel item -->
   <!-- start offer -->
-  <div class="box-photo2 text-white widget d-flex flex-wrap  ">
+  <div class="box-photo2 text-white widget d-flex flex-wrap">
     <div class="card border border-white container mx-auto col-lg-3" style="width: 18rem;">
       <div class="card-body text-center ">
         <img src="img/star-icon.png" width="40px" height="40px" class="img-fluid mx-auto d-block m-2" />
