--- a/blog-single.html
+++ b/blog-single.html
@@ -162,8 +162,8 @@
                         <h5 class="card-title bg-primary rounded p-3 text-white">
                             چه بخت بلندی چه ماهی چه ماهی چه حال عجیبی چه حال مستی ...
                         </h5>
-                        <div class=" g-0">
-                            <div class="boy-pic flex-lg-nowrap flex-wrap">
+                        <div  class=" g-0">
+                            <div class="boy-pic flex-lg-nowrap flex-wrap text-end">
                                 <img src="./img/people-Page.jpg" class="p-2 mx-auto w-100" />
                                 <div class="card-body pb-0">
                                     <small class="text-muted ms-3">
@@ -179,7 +179,7 @@
                                         <img src="./img/qoutation.jpg" class="w-25 h-25 m-2" alt="">
                                         <p class="">
                                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                                            استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و
+                                            استفاده از طراحان گراeفیک است. چاپگرها و متون بلکه روزنامه و
                                             مجله در ستون و سطرآنچنان که آینده شناخت فراوان جامعه و متخصصان
                                             را می طلبد ....
                                         </p>
@@ -205,11 +205,11 @@
                                         سخت تایپ به پایان رسد وزمان مورد نیاز گیرد.
                                     </p>
 
-                                    <div class="card-text d-flex flex-wrap justify-content-between">
+                                    <div class="card-text  d-flex flex-wrap justify-content-between">
                                         <div class="cardd d-flex flex-wrap">
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="text-info fas fa-user ms-1"></i>
+                                                    <i class=" icon text-info fas fa-user ms-1"></i>
                                                     <p>معین اکبری</p>
                                                 </div>
                                             </small>
