--- a/blog.html
+++ b/blog.html
@@ -181,83 +181,33 @@
                                         مجله در ستون و سطرآنچنان که آینده شناخت فراوان جامعه و متخصصان
                                         را می طلبد ....
                                     </p>
-                                    <p class="card-text">
+                                    <p class="card-text mt-5 ">
                                         <div class="cardd d-flex flex-wrap">
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="fas fa-user ms-1"></i>
-                                                    <p>معین اکبری</p>
+                                                    <i class="icon fas fa-user ms-1"></i>
+                                                    <p class="border-start px-1">معین اکبری</p>
                                                 </div>
                                             </small>
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="fa fa-clock ms-1"></i>
-                                                    <p>۱۵ فروردین ۹۵</p>
+                                                    <i class="icon fa fa-clock ms-1"></i>
+                                                    <p class="border-start px-1" >۱۵ فروردین ۹۵</p>
                                                 </div>
                                             </small>
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="fas fa-comment-alt ms-1"></i>
-                                                    <p>۳ نظر</p>
+                                                    <i class="icon fas fa-comment-alt ms-1"></i>
+                                                    <p class="border-start px-1">۳ نظر</p>
                                                 </div>
                                             </small>
                                             <small class="text-muted">
                                                 <div class="d-flex">
-                                                    <i class="fas fa-eye ms-1"></i>
-                                                    <p>۷۴ بازدید</p>
+                                                    <i class="icon fas fa-eye ms-1"></i>
+                                                    <p class="border-start px-1">۷۴ بازدید</p>
                                                 </div>
                                             </small>
-                                            <button class="btn btn-success border-0 text-white ps-4 pe-4 me-5 mb-3"
-                                                onclick="window.location.href='blog-single.html'">ادامه مطلب</button>
-                                        </div>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-white">
-                    <div class="card mb-3 p-2 pb-0 rounded" style="max-width: 800px;">
-                        <h5 class="card-title bg-primary rounded p-3 text-white">
-                            چه بخت بلندی چه ماهی چه ماهی چه حال عجیبی چه حال مستی ...
-                        </h5>
-                        <div class=" g-0">
-                            <div class="boy-pic d-flex flex-lg-nowrap flex-wrap">
-                                <img src="img/boy.jpg" class="p-2 mx-auto" width="153" height="153" />
-                                <div class="card-body pb-0">
-                                    <p class="card-text">
-                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                                        استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و
-                                        مجله در ستون و سطرآنچنان که آینده شناخت فراوان جامعه و متخصصان
-                                        را می طلبد ....
-                                    </p>
-                                    <p class="card-text">
-                                        <div class="cardd d-flex flex-wrap">
-                                            <small class="text-muted ms-3">
-                                                <div class="d-flex">
-                                                    <i class="fas fa-user ms-1"></i>
-                                                    <p>معین اکبری</p>
-                                                </div>
-                                            </small>
-                                            <small class="text-muted ms-3">
-                                                <div class="d-flex">
-                                                    <i class="fa fa-clock ms-1"></i>
-                                                    <p>۱۵ فروردین ۹۵</p>
-                                                </div>
-                                            </small>
-                                            <small class="text-muted ms-3">
-                                                <div class="d-flex">
-                                                    <i class="fas fa-comment-alt ms-1"></i>
-                                                    <p>۳ نظر</p>
-                                                </div>
-                                            </small>
-                                            <small class="text-muted">
-                                                <div class="d-flex">
-                                                    <i class="fas fa-eye ms-1"></i>
-                                                    <p>۷۴ بازدید</p>
-                                                </div>
-                                            </small>
-                                            <button class="btn btn-success border-0 text-white ps-4 pe-4 me-5 mb-3"
+                                            <button class="bot-green btn btn-success border-0 rounded-0  text-white ps-4 pe-4 me-4 "
                                                 onclick="window.location.href='blog-single.html'">ادامه مطلب</button>
                                         </div>
                                     </p>
@@ -272,7 +222,7 @@
                             چه بخت بلندی چه ماهی چه ماهی چه حال عجیبی چه حال مستی ...
                         </h5>
                         <div class=" g-0">
-                            <div class="boy-pic d-flex flex-lg-nowrap flex-wrap">
+                            <div class="boy-pic d-flex  flex-lg-nowrap flex-wrap">
                                 <img src="img/boy.jpg" class="p-2 mx-auto" width="153" height="153" />
                                 <div class="card-body pb-0">
                                     <p class="card-text">
@@ -281,33 +231,33 @@
                                         مجله در ستون و سطرآنچنان که آینده شناخت فراوان جامعه و متخصصان
                                         را می طلبد ....
                                     </p>
-                                    <p class="card-text">
+                                    <p class="card-text mt-5 ">
                                         <div class="cardd d-flex flex-wrap">
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="fas fa-user ms-1"></i>
-                                                    <p>معین اکبری</p>
+                                                    <i class="icon fas fa-user ms-1"></i>
+                                                    <p class="border-start px-1">معین اکبری</p>
                                                 </div>
                                             </small>
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="fa fa-clock ms-1"></i>
-                                                    <p>۱۵ فروردین ۹۵</p>
+                                                    <i class="icon fa fa-clock ms-1"></i>
+                                                    <p class="border-start px-1" >۱۵ فروردین ۹۵</p>
                                                 </div>
                                             </small>
                                             <small class="text-muted ms-3">
                                                 <div class="d-flex">
-                                                    <i class="fas fa-comment-alt ms-1"></i>
-                                                    <p>۳ نظر</p>
+                                                    <i class="icon fas fa-comment-alt ms-1"></i>
+                                                    <p class="border-start px-1">۳ نظر</p>
                                                 </div>
                                             </small>
                                             <small class="text-muted">
                                                 <div class="d-flex">
-                                                    <i class="fas fa-eye ms-1"></i>
-                                                    <p>۷۴ بازدید</p>
+                                                    <i class="icon fas fa-eye ms-1"></i>
+                                                    <p class="border-start px-1">۷۴ بازدید</p>
                                                 </div>
                                             </small>
-                                            <button class="btn btn-success border-0 text-white ps-4 pe-4 me-5 mb-3"
+                                            <button class="bot-green btn btn-success border-0 rounded-0  text-white ps-4 pe-4 me-4 "
                                                 onclick="window.location.href='blog-single.html'">ادامه مطلب</button>
                                         </div>
                                     </p>
@@ -316,7 +266,56 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="bg-white">
+                    <div class="card mb-3 p-2 pb-0 rounded " style="max-width: 800px;">
+                        <h5 class="card-title bg-primary rounded p-3 text-white">
+                            چه بخت بلندی چه ماهی چه ماهی چه حال عجیبی چه حال مستی ...
+                        </h5>
+                        <div class=" g-0">
+                            <div class="boy-pic d-flex  flex-lg-nowrap flex-wrap">
+                                <img src="img/boy.jpg" class="p-2 mx-auto" width="153" height="153" />
+                                <div class="card-body pb-0">
+                                    <p class="card-text">
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+                                        استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و
+                                        مجله در ستون و سطرآنچنان که آینده شناخت فراوان جامعه و متخصصان
+                                        را می طلبد ....
+                                    </p>
+                                    <p class="card-text mt-5 ">
+                                        <div class="cardd d-flex flex-wrap">
+                                            <small class="text-muted ms-3">
+                                                <div class="d-flex">
+                                                    <i class="icon fas fa-user ms-1"></i>
+                                                    <p class="border-start px-1">معین اکبری</p>
+                                                </div>
+                                            </small>
+                                            <small class="text-muted ms-3">
+                                                <div class="d-flex">
+                                                    <i class="icon fa fa-clock ms-1"></i>
+                                                    <p class="border-start px-1" >۱۵ فروردین ۹۵</p>
+                                                </div>
+                                            </small>
+                                            <small class="text-muted ms-3">
+                                                <div class="d-flex">
+                                                    <i class="icon fas fa-comment-alt ms-1"></i>
+                                                    <p class="border-start px-1">۳ نظر</p>
+                                                </div>
+                                            </small>
+                                            <small class="text-muted">
+                                                <div class="d-flex">
+                                                    <i class="icon fas fa-eye ms-1"></i>
+                                                    <p class="border-start px-1">۷۴ بازدید</p>
+                                                </div>
+                                            </small>
+                                            <button class="bot-green btn btn-success border-0 rounded-0  text-white ps-4 pe-4 me-4 "
+                                                onclick="window.location.href='blog-single.html'">ادامه مطلب</button>
+                                        </div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="d-flex justify-content-between">
                     <div style="max-width: 600px;">
                         <div aria-label="Page navigation">
