--- a/blog-single.html
+++ b/blog-single.html
@@ -77,6 +77,21 @@
 
             </div>
         </nav>
+          <!-- start location -->
+          <div class="nav-white bg-white w-100 container-fluid">
+            <div class=" d-flex align-items-center container">
+                <div>
+                    <i class="loc fas fa-map-marker-alt p-2"></i>
+                </div>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ms-2">موقعیت شما</p>
+                </div>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ">صفحه در حال سایت میباشد</p>
+                </div>
+            </div>
+        </div>
+        <!-- end location -->
         <!-- end-nav -->
         <div class="container d-flex flex-wrap justify-content-between">
             <div class=" col-lg-4 col-sm-12 flex-wrap mt-5">
