--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
             </ul>
   
             <div>
-              <button type="button" class="portabl btn btn-success rounded-pill border-0">پورتال مشتریان<img class="px-2"
+              <button type="button" class="portabl btn btn-success rounded-pill border-0 ">پورتال مشتریان<img class="px-2"
                   src="img/user.png" /></button>
             </div>
           </div>
@@ -78,16 +78,20 @@
       </nav>
       <!-- end-nav -->
             <!-- start location -->
-            <div class="nav-white bg-white w-100 container-fluid">
-                <div class=" d-flex align-items-center mx-5 px-5 pt-2">
-                    <div class="main-loc">
-                        <i class="loc fas fa-map-marker-alt "></i>
-                    </div>
-                    <p id="trapezoid" class="poz mx-4 p-1">موقعیت شما</p>
-                    <p id="trapezoid" class="poz p-1">صفحه در حال سایت میباشد</p>
+        <div class="nav-white bg-white w-100 container-fluid">
+            <div class=" d-flex align-items-center container">
+                <div>
+                    <i class="loc fas fa-map-marker-alt p-2"></i>
+                </div>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ms-2">موقعیت شما</p>
+                </div>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ">صفحه در حال سایت میباشد</p>
                 </div>
             </div>
-            <!-- end location -->
+        </div>
+        <!-- end location -->
         </nav>
         <!-- end-nav -->
         <div class="container d-flex flex-wrap justify-content-between">
