--- a/Contact.html
+++ b/Contact.html
@@ -81,20 +81,24 @@
         <!-- end-nav -->
         <!-- start location -->
         <div class="nav-white bg-white w-100 container-fluid">
-            <div class=" d-flex align-items-center mx-5 px-5 pt-2">
-                <div class="main-loc">
-                    <i class="loc fas fa-map-marker-alt "></i>
+            <div class=" d-flex align-items-center container">
+                <div>
+                    <i class="loc fas fa-map-marker-alt p-2"></i>
                 </div>
-                <p id="trapezoid" class="poz mx-4 p-1">موقعیت شما</p>
-                <p id="trapezoid" class="poz p-1">صفحه در حال سایت میباشد</p>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ms-2">موقعیت شما</p>
+                </div>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ">صفحه در حال سایت میباشد</p>
+                </div>
             </div>
         </div>
         <!-- end location -->
         <!-- start form -->
-        <div class="bg-white mt-4 mb-4 pb-5 container ">
-            <div class="bg-white d-flex container align-items-center p-3 border-bottom">
+        <div class="bg-white mt-4 mb-4 pb-5 m-5">
+            <div class="d-flex  align-items-center p-3 p-5 py-3 border-bottom">
                 <img src="img/monitor.jpg" width="26px" height="22px" class="ms-2" />
-                <span>ارتباط با ما</span>
+                <span><strong>ارتباط با ما</strong></span>
             </div>
             <div class="d-flex justify-content-center flex-column align-items-center  text-center border-bottom">
                 <h1 class="mt-5">دفتر شیراز</h1>
@@ -111,24 +115,26 @@
                             placeholder="نام و نام خانوادگی شما">
                     </div>
                     <div class="d-flex mb-3 ">
-                        <input type="email" class="form-control bg-light ms-2" id="exampleFormControlInput1"
+                        <input type="email" class="form-control bg-light ms-2 " id="exampleFormControlInput1"
                             placeholder="ایمیل شما">
-                        <input type="email" class="form-control bg-light" id="exampleFormControlInput1"
+                        <input type="email" class="form-control bg-light " id="exampleFormControlInput1"
                             placeholder="آدرس سایت (اختیاری)">
                     </div>
                     <div class="mb-3">
-                        <textarea rows="8"class="form-control my-2 rounded-1 bg-light row-9" id="exampleFormControlTextarea1"
-                            rows="3"> توضیحات شما</textarea>
-                    </div>               
+                        <textarea rows="8" class="form-control my-2 rounded-1 bg-light row-9"
+                            id="exampleFormControlTextarea1" rows="3"> توضیحات شما</textarea>
+                    </div>
                     <div>
                         <div class="d-flex  flex-wrap flex-lg-nowrap">
-                            <label for="code" class="mt-2 ms-1 font-size">کد نمایش داده شده را در کادر وارد نمایید:</label>
-                            <input class="bg-light border-1 rounded-1 " type="number" name="code" id="code"   style="height: 40px; width: 80px;" />
+                            <label for="code" class="mt-2 ms-1 font-size">کد نمایش داده شده را در کادر وارد
+                                نمایید:</label>
+                            <input class="bg-light border-1 rounded-1 border-box " type="number" name="code" id="code"
+                                style="height: 40px; width: 80px;" />
                             <img src="img/code.jpg" width="140px" height="40px" />
                             <img src="img/refresh.jpg" width="20px" height="20px" class="mt-2" />
                         </div>
                     </div>
-                    <button class=" border-0 text-white py-2 w-100 mt-3 " style="background-color: #81c33a">
+                    <button class=" border-0 rounded-1 text-white py-2 w-100 mt-3 " style="background-color: #81c33a">
                         ارسال نظر
                     </button>
                 </div>
@@ -136,7 +142,7 @@
                     <img src="img/map.jpg" class="img-fluid  pt-5" />
                 </div>
             </div>
-            
+
         </div>
         <!-- end form -->
     </div>
