--- a/error.html
+++ b/error.html
@@ -81,18 +81,19 @@
         <!-- end-nav -->
         <!-- start location -->
         <div class="nav-white bg-white w-100 container-fluid">
-            <div class=" d-flex align-items-center mx-5 px-5 pt-2">
-                <div class="main-loc">
-                    <i class="loc fas fa-map-marker-alt "></i>
-                </div>
-                <p id="trapezoid" class="poz mx-4 p-1">موقعیت شما</p>
-                <p id="trapezoid" class="poz p-1">صفحه در حال سایت میباشد</p>
-            </div>
-        </div>
-        <div class="align-items-center justify-content-center">
-            <img src="./img/Page_404.jpg" class="img-fluid" alt="">
-        </div>
-        <!-- end location -->
+          <div class=" d-flex align-items-center container">
+              <div>
+                  <i class="loc fas fa-map-marker-alt p-2"></i>
+              </div>
+              <div>
+                  <p id="trapezoid" class="poz p-2 mt-1 ms-2">موقعیت شما</p>
+              </div>
+              <div>
+                  <p id="trapezoid" class="poz p-2 mt-1 ">صفحه در حال سایت میباشد</p>
+              </div>
+          </div>
+      </div>
+      <!-- end location -->
         <footer class="text-white d-flex flex-wrap justify-content-between p-5 flex-row-reverse ">
             <div class="left-box col-md-4 mx-auto" dir="rtl">
               <h3>نماد های اعتماد</h3>
