--- a/login.html
+++ b/login.html
@@ -81,52 +81,56 @@
         <!-- end-nav -->
         <!-- start location -->
         <div class="nav-white bg-white w-100 container-fluid">
-            <div class=" d-flex align-items-center mx-5 px-5 pt-2">
-                <div class="main-loc">
-                    <i class="loc fas fa-map-marker-alt "></i>
+            <div class=" d-flex align-items-center container">
+                <div>
+                    <i class="loc fas fa-map-marker-alt p-2"></i>
                 </div>
-                <p id="trapezoid" class="poz mx-4 p-1">موقعیت شما</p>
-                <p id="trapezoid" class="poz p-1">صفحه در حال سایت میباشد</p>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ms-2">موقعیت شما</p>
+                </div>
+                <div>
+                    <p id="trapezoid" class="poz p-2 mt-1 ">صفحه در حال سایت میباشد</p>
+                </div>
             </div>
         </div>
         <!-- end location -->
         <!-- start form -->
-        <div class="bg-white mt-4 mb-4 pb-5 container ">
-            <div class="bg-white d-flex container align-items-center p-3 border-bottom">
+        <div class="bg-white mt-4 mb-4 pb-5 m-5">
+            <div class="bg-white d-flex align-items-center p-5 py-3 border-bottom ">
                 <img src="img/man.jpg" width="25px" height="25px" class="ms-2" />
-                <span>ورود به پرتال</span>
+                <span><strong>ورود به پرتال</strong></span>
             </div>
-
-            <div class=" d-flex flex-wrap m-auto">
-                <div class="col-lg-5 d-grid mt-5  flex-wrap m-auto">
+         
+            <div class=" d-flex flex-wrap m-auto ">
+                <div class="col-lg-5 d-grid mt-5 flex-wrap m-auto">
                     <div class="mb-3">
                         <input type="text" class="form-control bg-light " id="exampleFormControlInput1"
                             placeholder="نام کاربری">
-                        <input type="text" class="form-control bg-light mt-3" id="exampleFormControlInput1"
+                        <input type="password" class="form-control bg-light mt-3" id="exampleFormControlInput1"
                             placeholder="رمز عبور">
                     </div>
 
                     <div>
                         <div class="d-flex  flex-wrap flex-lg-nowrap">
                             <label for="code" class="mt-2 ms-2 font-size">کد نمایش داده شده را در کادر وارد نمایید:</label>
-                            <input class="bg-light border-1 rounded-1 " type="number" name="code" id="code"
+                            <input class="border-box bg-light border-1 rounded-1 " type="number" name="code" id="code"
                                 style="height: 40px; width: 80px;" />
                             <img src="img/code.jpg" width="140px" height="40px" />
                             <img src="img/refresh.jpg" width="20px" height="20px" class="mt-2" />
                         </div>
                     </div>
                     <div class="d-flex">
-                        <button class=" border-0 text-white py-2 w-100 mt-3 " style="background-color: #81c33a">
+                        <button class="pading-box border-0 rounded-1 text-white w-100 mt-3 " style="background-color: #81c33a">
                            ورود به سایت
                         </button>
-                        <button class="bot-box-user border-0 py-2 w-100 mt-3 me-2 text-dark">
+                        <button class="pading-box bot-box-user border-0 rounded-1  w-100 mt-3 me-2 text-dark">
                          رمز را فراموش کردم
                         </button>
                     </div>
             
                 </div>
                 <div class="col-lg-6 mt-5 ">
-                    <a href="register.html"> <img src="img/Login.jpg" class="img-fluid mx-auto image-hover" width="580"
+                    <a href="r"> <img src="img/Login.jpg" class="img-fluid mx-auto " width="580"
                         height="245"></a>
                 </div>
             </div>
