--- a/Contact.html
+++ b/Contact.html
@@ -43,41 +43,39 @@
         <!-- start-nav -->
         <nav class="navbar navbar-expand-lg navbar-light py-0 w-100">
             <div class="container">
-                <a class="navbar-brand " href="/index.html"><img src="./img/logo.png" alt=""></a>
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse  " id="navbarNav">
-                    <ul class="navbar-nav justify-content-between align-items-center">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">صفحه اصلی</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">قوانین</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white " href="#">سوالات متداول</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">ارتباط با مدیریت</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">بلاگ</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">درباره ما</a>
-                        </li>
-                    </ul>
-
-                    <div>
-                        <button type="button" class="portabl btn btn-success rounded-pill border-0">پورتال مشتریان<img
-                                class="px-2" src="img/user.png" /></button>
-                    </div>
-                </div>
-
+              <a class="navbar-brand " href="/index.html"><img src="./img/logo.png" alt=""></a>
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse  " id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link text-white" aria-current="page" href="./index.html">صفحه اصلی</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="error.html">قوانین</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white " href="error.html">سوالات متداول</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="error.html">ارتباط با مدیریت</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="./blog.html">بلاگ</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="./Contact.html">درباره ما</a>
+                  </li>
+              </ul>
+              <div>
+                <button  onclick="window.location.href='login.html'" type="button" class="portabl btn btn-success rounded-pill border-0 mt-lg-0 mb-2">پورتال مشتریان<img
+                    class="px-2" src="img/user.png" /></button>
+              </div>
+              </div>
             </div>
-        </nav>
+          </nav>
         <!-- end-nav -->
         <!-- start location -->
         <div class="nav-white bg-white w-100 container-fluid">
@@ -108,16 +106,16 @@
                 </div>
 
             </div>
-            <div class=" d-flex flex-wrap m-auto">
+            <div class=" d-flex flex-wrap m-auto container">
                 <div class="col-lg-5 d-grid mt-5  flex-wrap m-auto">
                     <div class="mb-3">
-                        <input type="text" class="form-control bg-light" id="exampleFormControlInput1"
+                        <input type="text" class="form-control bg-light col-lg-12 col-12" id="exampleFormControlInput1"
                             placeholder="نام و نام خانوادگی شما">
                     </div>
-                    <div class="d-flex mb-3 ">
-                        <input type="email" class="form-control bg-light ms-2 " id="exampleFormControlInput1"
+                    <div class="d-flex mb-3 flex-wrap ">
+                        <input type="email" class="form-control bg-light ms-2 col-lg-6 col-12 " id="exampleFormControlInput1"
                             placeholder="ایمیل شما">
-                        <input type="email" class="form-control bg-light " id="exampleFormControlInput1"
+                        <input type="email" class="form-control bg-light col-lg-6 col-12 mt-3 " id="exampleFormControlInput1"
                             placeholder="آدرس سایت (اختیاری)">
                     </div>
                     <div class="mb-3">
