--- a/blog-single.html
+++ b/blog-single.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blog</title>
+    <title>blog Single</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/blog.css">
@@ -47,32 +47,32 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse  " id="navbarNav">
-                    <ul class="navbar-nav justify-content-between align-items-center">
+                <div class="collapse navbar-collapse " id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">صفحه اصلی</a>
+                            <a class="nav-link text-white" aria-current="page" href="./index.html">صفحه اصلی</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">قوانین</a>
+                            <a class="nav-link text-white" href="error.html">قوانین</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="#">سوالات متداول</a>
+                            <a class="nav-link text-white " href="error.html">سوالات متداول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">ارتباط با مدیریت</a>
+                            <a class="nav-link text-white" href="error.html">ارتباط با مدیریت</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">بلاگ</a>
+                            <a class="nav-link text-white" href="./blog.html">بلاگ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">درباره ما</a>
+                            <a class="nav-link text-white" href="./Contact.html">درباره ما</a>
                         </li>
                     </ul>
 
                     <div>
-                        <button type="button" class="portabl btn btn-success rounded-pill border-0">پورتال مشتریان<img
-                                class="px-2" src="img/user.png" /></button>
-                    </div>
+                        <button  onclick="window.location.href='login.html'" type="button" class="portabl btn btn-success rounded-pill border-0 mt-lg-0 mb-2">پورتال مشتریان<img
+                            class="px-2" src="img/user.png" /></button>
+                      </div>
                 </div>
 
             </div>
@@ -283,15 +283,15 @@
                     </div>
                 </div>
                 <div
-                    class="card-footer card mb-3 p-2 rounded w-100 bg-white d-flex flex-wrap justify-content-around align-items-center flex-row">
+                    class="card-footer rounded  bg-white d-flex flex-wrap justify-content-around align-items-center">
                     <div>
                         <p>برچسب ها</p>
                     </div>
-                    <p class="labels">تست برچسب</p>
-                    <p class="labels">محمد علی</p>
-                    <p class="labels">طراحی سایت</p>
-                    <p class="labels">داودی</p>
-                    <p class="labels">تست برچسب</p>
+                    <p class="bg-light p-1">تست</p>
+                    <p class="bg-light p-1">محمد علی</p>
+                    <p class="bg-light p-1">طراحی سایت</p>
+                    <p class="bg-light p-1">داودی</p>
+                    <p class="bg-light p-1">تست</p>
                 </div>
             </div>
         </div>
