--- a/blog.html
+++ b/blog.html
@@ -47,31 +47,31 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse  " id="navbarNav">
-            <ul class="navbar-nav justify-content-between align-items-center">
-              <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="#">صفحه اصلی</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">قوانین</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white " href="#">سوالات متداول</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">ارتباط با مدیریت</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">بلاگ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">درباره ما</a>
-              </li>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-white" aria-current="page" href="./index.html">صفحه اصلی</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="error.html">قوانین</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white " href="error.html">سوالات متداول</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="error.html">ارتباط با مدیریت</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./blog.html">بلاگ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./Contact.html">درباره ما</a>
+                </li>
             </ul>
   
             <div>
-              <button type="button" class="portabl btn btn-success rounded-pill border-0 ">پورتال مشتریان<img class="px-2"
-                  src="img/user.png" /></button>
-            </div>
+                <button  onclick="window.location.href='login.html'" type="button" class="portabl btn btn-success rounded-pill border-0 mt-lg-0 mb-2">پورتال مشتریان<img
+                    class="px-2" src="img/user.png" /></button>
+              </div>
           </div>
   
         </div>
