--- a/login.html
+++ b/login.html
@@ -49,31 +49,31 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse  " id="navbarNav">
-                    <ul class="navbar-nav justify-content-between align-items-center">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">صفحه اصلی</a>
+                            <a class="nav-link text-white" aria-current="page" href="./index.html">صفحه اصلی</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">قوانین</a>
+                            <a class="nav-link text-white" href="error.html">قوانین</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="#">سوالات متداول</a>
+                            <a class="nav-link text-white " href="error.html">سوالات متداول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">ارتباط با مدیریت</a>
+                            <a class="nav-link text-white" href="error.html">ارتباط با مدیریت</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">بلاگ</a>
+                            <a class="nav-link text-white" href="./blog.html">بلاگ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">درباره ما</a>
+                            <a class="nav-link text-white" href="./Contact.html">درباره ما</a>
                         </li>
                     </ul>
 
                     <div>
-                        <button type="button" class="portabl btn btn-success rounded-pill border-0">پورتال مشتریان<img
-                                class="px-2" src="img/user.png" /></button>
-                    </div>
+                        <button  onclick="window.location.href='login.html'" type="button" class="portabl btn btn-success rounded-pill border-0 mt-lg-0 mb-2">پورتال مشتریان<img
+                            class="px-2" src="img/user.png" /></button>
+                      </div>
                 </div>
 
             </div>
@@ -95,7 +95,7 @@
         </div>
         <!-- end location -->
         <!-- start form -->
-        <div class="bg-white mt-4 mb-4 pb-5 m-5">
+        <div class="bg-white mt-4 mb-4 pb-5  container">
             <div class="bg-white d-flex align-items-center p-5 py-3 border-bottom ">
                 <img src="img/man.jpg" width="25px" height="25px" class="ms-2" />
                 <span><strong>ورود به پرتال</strong></span>
@@ -130,7 +130,7 @@
             
                 </div>
                 <div class="col-lg-6 mt-5 ">
-                    <a href="r"> <img src="img/Login.jpg" class="img-fluid mx-auto " width="580"
+                    <a href="./rigester.html"> <img src="img/Login.jpg" class="img-fluid mx-auto " width="580"
                         height="245"></a>
                 </div>
             </div>
