--- a/rigester.html
+++ b/rigester.html
@@ -48,24 +48,24 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse  " id="navbarNav">
-          <ul class="navbar-nav justify-content-between align-items-center">
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-white" aria-current="page" href="#">صفحه اصلی</a>
+              <a class="nav-link text-white" aria-current="page" href="./index.html">صفحه اصلی</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">قوانین</a>
+              <a class="nav-link text-white" href="./error.html">قوانین</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white " href="#">سوالات متداول</a>
+              <a class="nav-link text-white " href="./error.html">سوالات متداول</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">ارتباط با مدیریت</a>
+              <a class="nav-link text-white" href="./error.html">ارتباط با مدیریت</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">بلاگ</a>
+              <a class="nav-link text-white" href="./blog.html">بلاگ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">درباره ما</a>
+              <a class="nav-link text-white" href="./Contact.html">درباره ما</a>
             </li>
           </ul>
 
@@ -99,34 +99,33 @@
         <span><strong>عضویت</strong></span>
       </div>
       <div class=" d-flex flex-wrap m-auto ">
-        <div class="col-lg-5 d-grid mt-5 flex-wrap m-auto">
-          <div class="mb-3">
+        <div class="col-lg-5 col-12 mt-5 flex-wrap m-auto container ">
+          <form>
             <p>مشخصات اکانت <small>( تمامی موارد الزامی میباشد ) </small></p>
-            <input type="email" class="form-control bg-light " id="exampleFormControlInput1"
-              placeholder="ایمیل خود را وارد کنید">
-          </div>
-          <div class="d-flex ">
-            <input type="password" class="form-control bg-light ms-1 " id="exampleFormControlInput1" placeholder="رمز عبور">
-            <input type="password" class="form-control bg-light me-1" id="exampleFormControlInput1"
-              placeholder="تکرار رمز عبور">
-          </div>
-          <div>
-            <div class="mt-3">
-              <p>مشخصات اکانت <small >( تمامی موارد الزامی میباشد ) </small></p>
+            <input type="email" name="email" id="email" placeholder="ایمیل خود را وارد نمایید"
+              class="p-2 mb-2 rounded-1 bg-light col-lg-12 col-12" />
+            <div class="d-flex flex-wrap flex-lg-nowrap">
+              <input type="password" name="pass" id="pass" placeholder="رمز عبور"
+                class="p-2 ms-1 my-2 rounded-1 bg-light col-lg-6 col-12" />
+              <input type="password" name="pass" id="pass" placeholder="تکرار رمز عبور"
+                class="p-2 my-2 rounded-1 bg-light col-lg-6 col-12" />
             </div>
-           
-            <input type="email" class="form-control bg-light mb-3" id="exampleFormControlInput1"
-              placeholder="نام و نام خانوادگی">
-          </div>
-          <div class="d-flex ">
-            <input type="number" class="form-control bg-light ms-1 " id="exampleFormControlInput1" placeholder="موبایل">
-            <input type="number" class="form-control bg-light me-1 " id="exampleFormControlInput1" placeholder="تلفن ثابت">
-          </div>
+            <p>مشخصات اکانت <small>( تمامی موارد الزامی میباشد ) </small></p>
+            <input type="text" name="email" id="email" placeholder="نام و نام خانوادگی"
+              class="p-2 mb-2 rounded-1 bg-light col-lg-12 col-12" />
+            <div class="d-flex flex-wrap flex-lg-nowrap">
+              <input type="tel" name="pass" id="pass" placeholder="موبایل"
+                class="p-2 my-2 ms-1 rounded-1 bg-light col-lg-6 col-12" />
+              <input type="tel" name="pass" id="pass" placeholder="تلفن ثابت"
+                class="p-2 my-2 rounded-1 bg-light col-lg-6 col-12" />
+            </div>
+          
+          </form>
           <div class="d-flex my-2">
             <input type="checkbox" name="checkbox" id="checkbox" class="mt-1 ms-1" />
             <label for="checkbox">
               قوانین سایت را خواندم و می پذیرم
-              <small class="text-danger">( مشاهده قوانین )</small>
+              <small  class="text-danger "><a href="#">(مشاهده قوانین)</small></a>
             </label>
           </div>
           <div class="code d-flex flex-lg-nowrap flex-wrap my-2">
@@ -135,7 +134,7 @@
             </div>
             <div class="d-flex flex-wrap flex-lg-nowrap">
               <input class="border-box bg-light border-1 rounded-1 " type="number" name="code" id="code"
-              style="height: 40px; width: 80px;" />
+                style="height: 40px; width: 80px;" />
               <img src="img/code.jpg" width="151px" height="39px" />
               <img src="img/refresh.jpg" width="20px" height="20px" class="mt-2" />
 
@@ -146,16 +145,13 @@
             </div>
           </div>
           <button class="pading-box border-0 rounded-1 text-white w-100 mt-3 " style="background-color: #81c33a">
-           ثبت نام
+            ثبت نام
           </button>
         </div>
-
-
-
-        <div class="col-lg-6 mt-5 mx-4  ">
-          <div class="left-box-ph p-4">
+        <div class="col-lg-6 col-12 mt-5 mx-lg-5 container ">
+          <div class="left-box-ph p-4 m-auto">
             <h3>توضیحات دلخواه قبل از ثبت نام</h3>
-            <p >
+            <p>
               لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
               استفاده از طراحـان گــــرافیک است. چاپگرها و متون بلکه
               روزنامکاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
@@ -173,12 +169,31 @@
               متخصصان را می طلبد.
               اربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای
               زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و
-              متخصصان را می طلبد.لورم ایپسوم متن ساختگی با تولید 
+              متخصصان را می طلبد.لورم ایپسوم متن ساختگی با تولید
             </p>
           </div>
         </div>
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- start footer -->
     <footer class="text-white d-flex flex-wrap justify-content-between p-5 flex-row-reverse ">
       <div class="left-box col-md-4 mx-auto" dir="rtl">
         <h3>نماد های اعتماد</h3>
@@ -231,6 +246,7 @@
       </p>
     </div>
   </div>
+  <!-- start footer -->
   <!-- end slider2 -->
   </div>
   <script src="./css/bootstrap.bundle.min.js"></script>
